fix title and description of the extension

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "__MSG_appName__",
-  "version": "0.0.30",
+  "version": "0.0.33",
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
@@ -13,7 +13,7 @@
       "19": "images/icon-19.png",
       "38": "images/icon-38.png"
     },
-    "default_title": "editor devtools",
+    "default_title": "Santa DevTools",
     "default_popup": "popup.html"
   },
   "background": {
