--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "__MSG_appName__",
-  "version": "0.0.33",
+  "version": "0.0.39",
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
@@ -41,6 +41,7 @@
   ],
   "devtools_page": "packages/devtools/panel.html",
   "permissions": [
+    "storage",
     "tabs",
     "http://*/*",
     "https://*/*"
