--- a/app/manifest.json
+++ b/app/manifest.json
@@ -24,15 +24,15 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "http://*/*",
-        "https://*/*"
-      ],
-      "js": [
-        "scripts/contentscript.js"
-      ],
-      "run_at": "document_end",
-      "all_frames": false
+      "matches": ["<all_urls>"],
+      "js": ["injected/GlobalHook.js"],
+      "run_at": "document_start",
+      "all_frames": true
+    },
+    {
+      "matches": ["<all_urls>"],
+      "js": ["scripts/contentscript.js"],
+      "run_at": "document_end"
     }
   ],
   "web_accessible_resources": [
