--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "editor-devtools",
   "version": "0.0.0",
   "dependencies": {
-    "react-templates": "^0.1.20"
+    "react-templates": "^0.1.20",
+    "requirejs-plugins": "^1.0.2"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -27,6 +28,7 @@
     "grunt-usemin": "~2.1.0",
     "jshint-stylish": "~0.1.5",
     "load-grunt-tasks": "~0.4.0",
+    "lodash": "^3.10.0",
     "time-grunt": "~0.3.1"
   },
   "engines": {
