--- a/.eslintrc
+++ b/.eslintrc
@@ -3,19 +3,18 @@
     "rules": {
         "no-array-constructor": 2,
         "no-catch-shadow": 2,
-        "no-comma-dangle": 2,
+        "comma-dangle": 2,
         "no-cond-assign": 2,
         "no-constant-condition": 2,
         "no-control-regex": 2,
         "no-div-regex": 1,
         "no-else-return": 2,
-        "no-empty-class": 2,
+        "no-empty-character-class": 2,
         "no-empty-label": 2,
         "no-eq-null": 2,
         "no-extend-native": 2,
         "no-extra-boolean-cast": 2,
-        "no-extra-strict": 2,
-        "global-strict": [2, "never"],
+        "strict": 2,
         "no-inner-declarations": [2, "functions"],
         "no-iterator": 2,
         "no-labels": 2,
@@ -38,20 +37,20 @@
         "no-shadow": 2,
         "no-shadow-restricted-names": 2,
         "no-spaced-func": 2,
-        "no-space-before-semi": 2,
+        "semi-spacing": 2,
         "no-sparse-arrays": 2,
         "no-sync": 0,
         "no-undef": 2,
         "no-unused-expressions": 2,
         "no-unused-vars": [2, {"vars": "all", "args": "after-used"}],
         "no-warning-comments": [0, { "terms": ["todo", "fixme", "xxx"], "location": "start" }],
-        "no-wrap-func": 2,
+        "no-extra-parens": 2,
         "yoda": 2,
 
         "block-scoped-var": 2,
         "brace-style": [2, "1tbs", { "allowSingleLine": true }],
         "consistent-return": 2,
-        "consistent-this": [0, "self", "TODO: add this options, remove this value in array"],
+        "consistent-this": [0, "self"],
         "curly": [2, "all"],
         "default-case": 0,
         "func-names": 0,
@@ -133,7 +132,6 @@
         "space-before-function-paren": [0, {"anonymous": "never", "named": "never"}],
 
         "enforce-package-access": 0,
-        "module-definition": 2,
         "simplify-if": 0,
         "semi-spacing": 0,
 
@@ -161,6 +159,7 @@
         "amd": true
     },
     "globals": {
-        "requirejs": true
+        "requirejs": true,
+        "chrome": true
     }
 }
