--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,14 @@
   "name": "editor-devtools",
   "version": "0.0.0",
   "dependencies": {
+    "bootstrap": "~3.3.5",
+    "jquery": "~2.1.4",
+    "jsoneditor": "~4.2.1",
+    "lodash": "~3.10.1",
+    "react": "~0.14.1",
+    "react-bootstrap": "~0.27.3",
     "requirejs": "~2.1.18",
-    "react": "~0.13.3",
-    "lodash": "~3.9.3",
-    "jquery": "~2.1.4"
+    "requirejs-plugins": "~1.0.3"
   },
   "devDependencies": {}
 }
