Add GoogleAnalytics to the popup page

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -25,6 +25,7 @@
     ],
     "persistent": true
   },
+  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'",
   "content_scripts": [
     {
       "matches": [
