changed login to be in a new tab and add auto click on google login after the page is loaded

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -38,6 +38,7 @@
     }
   ],
   "web_accessible_resources": [
+    "scripts/logInGoogle.js",
     "scripts/contentActions.js",
     "scripts/utils/jsonUtils.js"
   ],
