--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
     "no-div-regex": 1,
     "no-else-return": 2,
     "no-empty-character-class": 2,
-    "no-labels": "error",
+    "no-labels": 2,
     "no-eq-null": 2,
     "no-extend-native": 2,
     "no-extra-boolean-cast": 2,
