--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "webpack-dev-server --content-base build/",
     "build": "webpack --progress --colors",
-    "watch": "webpack -w --progress --colors"
+    "watch": "webpack -w --progress --colors",
+    "deploy": "npm run build && node ./scripts/deploy.js ./build ./target/editorDevTools.zip"
   },
   "dependencies": {
     "immutable": "^3.8.1",
@@ -25,6 +26,7 @@
     "url-parse": "^1.1.3"
   },
   "devDependencies": {
+    "archiver": "^1.2.0",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
