--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "jquery": "^3.1.0",
     "json-loader": "^0.5.4",
     "lodash": "^4.15.0",
-    "material-ui": "^0.15.4",
-    "react": "0.14.7",
-    "react-dom": "0.14.7",
+    "material-ui": "^0.16.2",
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
     "react-motion": "^0.4.4",
     "react-redux": "^4.4.5",
     "react-swipeable-views": "^0.6.5",
-    "react-tap-event-plugin": "^0.2.2",
+    "react-tap-event-plugin": "^2.0.1",
     "recompose": "^0.20.2",
     "redux": "3.3.1",
     "url": "^0.11.0",
