--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,9 @@
 {
   "extends": "airbnb",
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+  },
   "rules": {
     "max-len": [0, 120, 2, {ignoreComments: true}],
     "arrow-body-style": 0,
@@ -15,7 +19,8 @@
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
   },
   "globals": {
-    "chrome": true
+    "chrome": true,
+    "ga": true
   },
   "env": {
     "browser": true
