--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "SantaDevTools",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "manifest_version": 2,
   "description": "Santa Devloper Tools",
   "icons": {
@@ -15,6 +15,7 @@
     "default_title": "Santa DevTools",
     "default_popup": "popup.html"
   },
+  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'",
   "content_scripts": [
     {
       "matches": [
