--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "SantaDevTools",
-  "version": "1.0.11",
+  "version": "1.0.13",
   "manifest_version": 2,
   "description": "Santa Devloper Tools",
   "icons": {
@@ -43,10 +43,29 @@
         "scripts/pullRequest.js"
       ],
       "run_at": "document_end"
+    },
+    {
+      "matches": [
+        "https://jira.wixpress.com/*"
+      ],
+      "js": [
+        "scripts/jiraHelper.js"
+      ],
+      "run_at": "document_end"
+    },
+    {
+      "matches": [
+        "http://editor.wix.com/html/editor/web/renderer/*"
+      ],
+      "js": [
+        "scripts/editorScriptInjector.js"
+      ],
+      "run_at": "document_end"
     }
   ],
   "web_accessible_resources": [
-    "scripts/contentActions.js"
+    "scripts/contentActions.js",
+    "scripts/editorHelper.js"
   ],
   "background": {
     "scripts": [
