--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "json-loader": "^0.5.4",
     "lodash": "^4.15.0",
     "material-ui": "^0.16.2",
+    "prettier": "^1.5.3",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-motion": "^0.4.4",
