--- a/.eslintrc
+++ b/.eslintrc
@@ -2,10 +2,10 @@
   "extends": "airbnb",
   "parserOptions": {
     "ecmaVersion": 6,
-    "sourceType": "module",
+    "sourceType": "module"
   },
   "rules": {
-    "max-len": [0, 120, 2, {ignoreComments: true}],
+    "max-len": [0, 120, 2, {"ignoreComments": true}],
     "arrow-body-style": 0,
     "quote-props": [1, "consistent-as-needed"],
     "no-cond-assign": [2, "except-parens"],
