--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Santa-DevTools",
+  "name": "santa-devtools",
   "version": "1.0.0",
   "description": "Santa Developer Tools",
   "scripts": {
@@ -27,6 +27,7 @@
     "url-parse": "^1.1.3"
   },
   "devDependencies": {
+    "@types/chrome": "0.0.69",
     "archiver": "^1.2.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
