--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "immutable": "^3.8.1",
     "jquery": "^3.1.0",
-    "json-loader": "^0.5.4",
     "lodash": "^4.15.0",
     "material-ui": "^0.16.2",
     "prettier": "^1.5.3",
@@ -27,15 +26,15 @@
     "url-parse": "^1.1.3"
   },
   "devDependencies": {
+    "@babel/cli": "7.0.0",
+    "@babel/core": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
     "@types/chrome": "0.0.69",
     "archiver": "^1.2.0",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-react": "6.5.0",
-    "babel-preset-stage-0": "6.5.0",
+    "babel-loader": "8.0.2",
     "bluebird": "^3.4.1",
-    "copy-webpack-plugin": "^3.0.1",
+    "copy-webpack-plugin": "4.5.2",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
     "eslint-plugin-import": "^1.12.0",
@@ -43,11 +42,13 @@
     "eslint-plugin-react": "^6.0.0",
     "glob": "^7.0.5",
     "html-webpack-plugin": "^1.6.1",
+    "json-loader": "0.5.7",
     "lodash.uniq": "^4.4.0",
     "shelljs": "^0.7.3",
-    "webpack": "1.12.13",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-shell-plugin": "^0.4.2"
+    "webpack": "4.17.2",
+    "webpack-cli": "3.1.0",
+    "webpack-dev-server": "3.1.7",
+    "webpack-shell-plugin": "0.5.0"
   },
   "author": "WebpackBin",
   "license": "ISC"
