--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
     "glob": "^7.0.5",
-    "html-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "3.2.0",
     "json-loader": "0.5.7",
     "lodash.uniq": "^4.4.0",
     "shelljs": "^0.7.3",
