--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "santa-devtools",
+  "name": "viewer-devtools",
   "version": "1.0.0",
-  "description": "Santa Developer Tools",
+  "description": "Viewer Developer Tools",
   "scripts": {
     "start": "webpack-dev-server --content-base build/",
     "build": "webpack --progress --colors",
