--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
-    "deploy": "yarn build && zip -r build/prod.zip build/chrome-mv3-prod && yarn open-dashboard && open build",
+    "deploy": "yarn version patch && git add . && yarn build && zip -r build/prod.zip build/chrome-mv3-prod && yarn open-dashboard && open build",
     "open-dashboard": "open https://chrome.google.com/webstore/devconsole/668cb2ff-2b78-49a3-a7bd-4257b2545885/aahcojdfiikihlpfamimldmionifllkl/edit/package?hl=en_US"
   },
   "dependencies": {
@@ -58,5 +58,6 @@
       "declarativeNetRequest",
       "tabs"
     ]
-  }
+  },
+  "packageManager": "yarn@3.2.2"
 }
